compiler/tools/fpp-to-dict/test/top/floatFwEventIdType.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/floatFwEventIdType.fpp:4.1
type FwEventIdType = F32
^
error: this F Prime framework type must be an alias of an integer type
